# dynamic_beta

./: .gitignore  README.md  TESTING.md  batch_log_prob.py  config_dpo.yaml  dataset_process_hh.py  debug_dataset_size.py  debug_step.py  dpo_loss.py  dpo_training.py  init_training.sh  main.py  package_fsdp.py  pyproject.toml
archive/dynamic_beta/: 01_build_pairs.py  02_gpt_judge.py  config_dpo.yaml  dataset_process_hh.py  dpo_training.py  mean_and_var.py  steps.txt  training-fsdp.py  training.py
doc/: agent-summary.md  agent-walkthrough.md  debug-no-update.md
scripts/: gen_hh_answer.py
src/dynamic_dpo/: __init__.py  data.py  modeling.py  train.py
src/dynamic_dpo/old/: training.py
test/: 03_summarize_results.py  EXAMPLE_OUTPUT.md  MIGRATION.md  MODEL_PATH_OVERRIDE.md  README.md  SUMMARY.md  gen_hh_answer.py  run_test_pipeline.py  test.sh
