[project]
name = "dynamic-beta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "peft>=0.18.0",
    "scipy>=1.16.3",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
]

[project.scripts]
"training.py" = "training:train"
"training-fsdp.py" = "package_fsdp:train"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "batch_log_prob",
    "dataset_process_hh",
    "dpo_loss",
    "mean_and_var",
    "package_fsdp",
    "training",
]
