[project]
name = "dynamic-beta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=2.4.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[project.scripts]
"training.py" = "training:train"
"training-fsdp.py" = "package_fsdp:train"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "batch_log_prob",
    "dataset_process_hh",
    "dpo_loss",
    "mean_and_var",
    "package_fsdp",
    "training",
]
